--- a/Irydae/Web/index.html
+++ b/Irydae/Web/index.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <meta charset="utf-8">
 <!--<link rel="stylesheet" href="style.css"/>-->
-<link rel="stylesheet" href="https://cdn.rawgit.com/Irydae/Web/b2276863/style.css" />
+<link rel="stylesheet" href="https://cdn.rawgit.com/Irydae/Web/ca4680b7/style.css" />
 
 <body>
-    <div align="center"><div class="full-wrapper"><div class="content-wrapper" style="width:650px;height:650px;position:relative;"><img src="https://i.imgur.com/9gynI7l.png"><div class="graph-wrapper"><div class="graph" id="graph" style="width:650px;height:650px"></div></div></div></div></div>
+    <div align="center"><div class="full-wrapper"><div class="content-wrapper" style="width:650px;height:650px;position:relative;"><img src="https://i.imgur.com/OnAuinp.jpg"><div class="graph-wrapper"><div class="graph" id="graph" style="width:650px;height:650px"></div></div></div></div></div>
 </body>
